// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Popout should render content when open 1`] = `
<Popout__Container>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    onClick={[Function]}
  >
    Click Me
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "horizontalAlignment": "left",
          "offsetX": "0",
          "offsetY": "0",
          "verticalAlignment": "bottom",
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Popout__Layer-sc-1vqdjha-1",
          "isStatic": false,
          "rules": Array [
            "position:absolute;",
            [Function],
            ";",
            [Function],
            ";z-index:10;",
          ],
        },
        "displayName": "Popout__Layer",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "horizontalAlignment": [Function],
          "offsetX": [Function],
          "offsetY": [Function],
          "verticalAlignment": [Function],
        },
        "render": [Function],
        "styledComponentId": "Popout__Layer-sc-1vqdjha-1",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
  >
    <DefaultTransition>
      <Content
        onClose={[Function]}
      />
    </DefaultTransition>
  </TransitionGroup>
</Popout__Container>
`;

exports[`components/Popout shouldn't render content when closed 1`] = `
<Popout__Container>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    onClick={[Function]}
  >
    Click Me
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "horizontalAlignment": "left",
          "offsetX": "0",
          "offsetY": "0",
          "verticalAlignment": "bottom",
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Popout__Layer-sc-1vqdjha-1",
          "isStatic": false,
          "rules": Array [
            "position:absolute;",
            [Function],
            ";",
            [Function],
            ";z-index:10;",
          ],
        },
        "displayName": "Popout__Layer",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "horizontalAlignment": [Function],
          "offsetX": [Function],
          "offsetY": [Function],
          "verticalAlignment": [Function],
        },
        "render": [Function],
        "styledComponentId": "Popout__Layer-sc-1vqdjha-1",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
  />
</Popout__Container>
`;
